# winipedia_utils

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_from_root.py
.github/workflows/: health_check.yaml  mypublish.yaml  myrelease.yaml  poetry-publish.yml  publish.yaml  pullrequest.yaml  release.yaml
tests/: __init__.py  conftest.py  test_0.py  test_run_from_root.py  test_test.py  test_zero.py
tests/base/: __init__.py
tests/base/fixtures/: __init__.py
tests/base/scopes/: __init__.py  class_.py  function.py  module.py  package.py  session.py
tests/base/utils/: __init__.py  utils.py
tests/test_utils/: test_add___init___files.py  test_git.py  test_mixin.py  test_multiprocessing.py  test_string.py
tests/test_utils/test_logging/: test_config.py  test_logger.py
tests/test_utils/test_testing/: test_base_test.py  test_create_tests.py  test_run_tests.py
tests/test_winipedia_utils/: __init__.py  test_consts.py  test_setup.py
tests/test_winipedia_utils/test_artifacts/: test_build.py
tests/test_winipedia_utils/test_build/: test_build.py
tests/test_winipedia_utils/test_concurrent/: __init__.py  test_concurrent.py  test_multiprocessing.py  test_multithreading.py
tests/test_winipedia_utils/test_conventions/: __init__.py  test_testing.py
tests/test_winipedia_utils/test_dev/: test_setup.py
tests/test_winipedia_utils/test_django/: __init__.py  test_bulk.py  test_command.py  test_database.py
tests/test_winipedia_utils/test_exceptions/: __init__.py  test_base.py
tests/test_winipedia_utils/test_git/: __init__.py  test_gitignore.py
tests/test_winipedia_utils/test_iterating/: test_iterate.py
tests/test_winipedia_utils/test_logging/: __init__.py  test_ansi.py  test_config.py  test_logger.py
tests/test_winipedia_utils/test_modules/: __init__.py  test_class_.py  test_function.py  test_inspection.py  test_module.py  test_package.py
tests/test_winipedia_utils/test_oop/: __init__.py
utils/: add___init___files.py  git.py  mixin.py  multiprocessing.py  string.py
utils/logging/: config.py  logger.py
utils/testing/: base_test.py  create_tests.py  run_tests.py
winipedia_utils/: consts.py  setup.py
winipedia_utils/artifacts/: build.py
winipedia_utils/concurrent/: concurrent.py  multiprocessing.py  multithreading.py
winipedia_utils/conventions/: __init__.py  testing.py
winipedia_utils/data/: dataframe.py
winipedia_utils/dev/: setup.py
winipedia_utils/django/: __init__.py  bulk.py  command.py  database.py
winipedia_utils/exceptions/: __init__.py  base.py
winipedia_utils/git/: gitignore.py
winipedia_utils/iterating/: iterate.py
winipedia_utils/logging/: logger.py
winipedia_utils/modules/: class_.py  function.py  module.py  package.py
winipedia_utils/os/: os.py
winipedia_utils/projects/: project.py
winipedia_utils/security/: keyring.py
winipedia_utils/testing/: assertions.py  config.py  create_tests.py  fixtures.py  skip.py
winipedia_utils/text/: config.py  string.py
(+221 files in other folders)
